# qt-qml-project

./: .gitignore  .qmlls.ini  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md  architecture.md  main.cpp  qml.qrc  qt_qml_project.qmlproject
.claude/: settings.local.json
qml/: LoginPage.qml  Main.qml  MainPage.qml
qml/tabs/: AboutTab.qml  CashierTab.qml
src/: AuthViewModel.cpp  AuthViewModel.h  CashierViewModel.cpp  CashierViewModel.h  DeviceViewModel.cpp  DeviceViewModel.h  Models.h  main.cpp
